chore: fix test